# SimpleSTLviewer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Mesh.hpp  Renderer.hpp  Window.hpp
src/: Mesh.cpp  Renderer.cpp  Window.cpp
